--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,47 @@
 body {
     font-family: 'Montserrat', sans-serif;
 }
-.container {
+.outer-container {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50vw;
+    width: 100vw;
+    padding: 50px 0;
+    background-color: #E3E7EB;
+}
+.outer-container .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
     margin: auto;
+    background-color: white;
+    padding: 50px;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.container .welcome {
+    width: 65%;
 }
 .container .welcome h1 {
     margin-bottom: 0;
     margin-top: 5px;
     font-size: 24px;
+    
 }
 .container .welcome p.title {
     text-align: justify;
     line-height: 1.5;
     margin: 10px 0;
 }
-.container .welcome p.button {
-    margin: 10px 0;
+.container .welcome .wrapper-contact-download {
+    display: flex;
+    margin: 30px 0;
 }
-.container .welcome p.button a {
+.container .welcome .wrapper-contact-download p.button {
+    margin: 10px 35px 10px 0;
+}
+.container .welcome .wrapper-contact-download p.button a {
     font-size: 16px;
     font-weight: 400;
     text-align: center;
@@ -35,35 +54,34 @@ body {
     outline: 2px solid black;
     cursor: pointer;
 }
-.container .welcome p.button a:hover {
+.container .welcome .wrapper-contact-download p.button a:hover {
     text-decoration: none;
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
     transition: all 0.5s;
 }
-.container .welcome p.button a.white {
+.container .welcome .wrapper-contact-download p.button a.white {
     color: #ffffff;
     border: 1.5px solid #ffffff;
 }
-.container .welcome p.button a.white:hover {
+.container .welcome .wrapper-contact-download p.button a.white:hover {
     background-color: #ffffff;
     color: #000000;
 }
-.container .welcome > a {
+.container .welcome .wrapper-contact-download a {
     display: flex;
     align-items: center;
     text-decoration: none;
     color: black;
 }
-.container .welcome > a p {
+.container .welcome .wrapper-contact-download a p {
     margin: 10px 10px 10px 0;
 }
-.container .social-media {
+.container .welcome .social-media {
     display: flex;
-    justify-content: center;
-    margin: 10px 0;
+    margin: 10px 0 10px -5px;
 }
-.container .social-media .icon {
+.container .welcome .social-media .icon {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,7 +89,10 @@ body {
     height: 40px;
     margin: 0 5px;
 }
-.container .social-media .icon a .fa-brands {
+.container .welcome .social-media .icon:first-of-type {
+    margin: 0px 5px 0 0;
+}
+.container .welcome .social-media .icon a .fa-brands {
     color: black;
     font-size: 30px;
 }
@@ -82,7 +103,7 @@ body {
     flex-direction: column;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    width: 270px;
+    width: 320px;
 }
 .container .photo-card .thumb img {
     width: 100%;
