commit review task

--- a/css/contact.css
+++ b/css/contact.css
@@ -99,3 +99,45 @@ button {
 button:hover {
     background-color: black;
 }
+
+#barsmenu {
+    display: none;
+  }
+  
+  .hamburger-nav-container {
+    font-size: 23px;
+    list-style-type: none;
+    display: none;
+  }
+  
+  .hamburger-nav-container a {
+    text-decoration: none;
+    color: #fff;
+    background-color: #9a9a9a;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border: 1px solid #fff;
+  }
+  
+  .hamburger-nav-container .hamburger-active {
+    text-decoration: none;
+    color: #fff;
+    background-color: orangered;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border: 1px solid #fff;
+  }
+  
+  @media only screen and (max-width: 980px) { /*bugs with max width is here 550*/
+    .item-collapse {
+      display: none;
+    }
+  
+    #barsmenu {
+      display: block;
+    }
+  }
