--- a/css/style.css
+++ b/css/style.css
@@ -121,3 +121,94 @@ body {
 .container .photo-card .title p {
     margin-top: 5px;
 }
+#barsmenu {
+  display: none;
+}
+
+.hamburger-nav-container {
+  font-size: 23px;
+  list-style-type: none;
+  display: none;
+}
+
+.hamburger-nav-container a {
+  text-decoration: none;
+  color: #fff;
+  background-color: #9a9a9a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  border: 1px solid #fff;
+}
+
+.hamburger-nav-container .hamburger-active {
+  text-decoration: none;
+  color: #fff;
+  background-color: orangered;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  border: 1px solid #fff;
+}
+
+@media only screen and (max-width: 900px) {
+  .card-container {
+    width: 100%;
+  }
+
+  .left {
+    flex: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .right {
+    margin-left: 0px;
+  }
+
+  section {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .skill {
+    flex-direction: column;
+  }
+
+  .item-collapse {
+    display: none;
+  }
+
+  #barsmenu {
+    display: block;
+  }
+
+  .outer-container .container {
+      flex-direction: column;
+      padding: 20px;
+  }
+  .container .welcome {
+      width: 100%;
+  }
+  .container .welcome .wrapper-contact-download {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
+  .container .welcome .wrapper-contact-download p.button {
+      margin: 25px 0;
+  }
+  .container .welcome .social-media {
+      justify-content: center;
+      margin: 10px 0;
+  }
+  .container .photo-card {
+      width: 250px;
+      margin-top: 25px;
+  }
+}
