--- a/css/testimonial.css
+++ b/css/testimonial.css
@@ -50,7 +50,7 @@ nav ul li .active {
 }
 
 .nav-right a {
-  background-color: orangered;
+  background-color: black;
   padding: 8px 25px;
   color: white;
   border-radius: 5px;
@@ -104,6 +104,12 @@ nav ul li .active {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.rating {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .rating-btn {
@@ -162,16 +168,20 @@ nav ul li .active {
 
 @media only screen and (max-width: 700px) {
   .testimonial {
-    width: 100%;
+    width: 60%;
   }
 }
 
-@media only screen and (max-width: 980px) { /*bugs with max width is here 980*/
+@media only screen and (max-width: 550px) {
   .item-collapse {
     display: none;
   }
 
   #barsmenu {
     display: block;
+  }
+
+  .rating-btn {
+      font-size: 16px;
   }
 }
