--- a/css/blog.css
+++ b/css/blog.css
@@ -383,7 +383,7 @@ select {
   }
 
   .blog-form form input, textarea, select {
-    padding: 8px 0 8px 8px;
+    padding: 8px 0;
   }
 
   .item-collapse {
