--- a/css/blog.css
+++ b/css/blog.css
@@ -384,7 +384,7 @@ select {
 
   .blog-form form input, textarea, select {
     padding: 8px 0;
-    width: 350px;
+    width: 90vw;
   }
 
   .item-collapse {
